syntax = "proto3";

package message.recommendations;

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.recommendations";

message SimilarEventsRequestProto {
  int64 event_id = 1;
  int64 user_id = 2;
  int32 max_results = 3;
}