syntax = "proto3";

package service;

import "messages/user_predictions_request.proto";
import "messages/interactions_count_request.proto";
import "messages/similar_events_request.proto";
import "messages/recommended_event.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.analyzer";

service RecommendationsController {
  rpc GetRecommendationsForUser (message.recommendations.UserPredictionsRequestProto)
      returns (stream message.recommendations.RecommendedEventProto);

  rpc GetSimilarEvents (message.recommendations.SimilarEventsRequestProto)
      returns (stream message.recommendations.RecommendedEventProto);

  rpc GetInteractionsCount (message.recommendations.InteractionsCountRequestProto)
      returns (stream message.recommendations.RecommendedEventProto);
}